# structured-streaming-project

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  run.py
src/bootstrap/: load_reference_data.py
src/consumer/: streaming_app.py
src/producer/: main.py  schemas.py
