[project]
name = "structured-streaming-project"
version = "0.1.0"
description = "ITESO Big Data Engineering final project: Kafka -> Spark Structured Streaming -> Neo4j"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pyspark==3.5.1",
    "kafka-python>=2.0.2",
    "neo4j>=5.18.0",
    "python-dotenv>=1.0.1",
    "rich>=13.7.1",
    "py4j==0.10.9.7",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
